--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,14 @@
 version: '3'
 
 services:
+
+ db:
+   image: postgres:10-alpine
+   environment:
+     - POSTGRES_DB=app
+     - POSTGRES_USER=postgres
+     - POSTGRES_PASSWORD=supersecretpassword
+
  app:
    build:
      context: .
@@ -9,4 +17,14 @@ services:
    volumes:
      - ./app:/app
    command: >
-     sh -c "python manage.py runserver 0.0.0.0:8000"
+     sh -c "python manage.py wait_for_db &&
+            python manage.py migrate &&
+            python manage.py runserver 0.0.0.0:8000"
+
+   environment:
+     - DB_HOST=db
+     - DB_NAME=app
+     - DB_USER=postgres
+     - DB_PASS=supersecretpassword
+   depends_on:
+     - db
